--- a/css/general.css
+++ b/css/general.css
@@ -172,14 +172,14 @@ text-align:center;
 
 /*----------------------------------DASHBOARD STYLES------------------------------------------*/
 #prsntnMenu{
-margin: 0 0 10px 0;
+margin: 0 0 40px 0;
 padding:0 0 0;
 width: 100%;
 height:40px;
 }
 
 #prsntnMenu>.addbtn{
-background: none repeat scroll 0 0 #733B84;
+background: none repeat scroll 0 0 #D9D9D9;
 border-radius: 20px 20px 20px 20px;
 float: right;
 margin: 0 125px 0 0;
@@ -197,6 +197,20 @@ background: #FFFFFF;
 box-shadow:0px 0px 25px 5px #A9A9A9;
 display: inline-block;
 }
+
+/*
+#linkNav{
+float: left;
+margin: 0 0 0 130px;
+padding: 0px;
+}
+
+#linkNav a{
+float: left;
+font-style:italic;
+text-decoration:underline;
+}
+*/
 
 /********************************/
 
@@ -355,6 +369,16 @@ margin: 0 0px;
 padding:0px;
 width:150px;
 text-align:center;
+background:#D9D9D9;
+}
+
+.slideHeader{
+float:left;
+margin: 0 0px;
+padding:0px;
+width:150px;
+text-align:center;
+background:#D9D9D9;
 }
 
 .prsntContent{
@@ -364,8 +388,8 @@ padding:0px;
 width:150px;
 height:150px;
 text-align:center;
-box-shadow: 0 0 5px 0 blue;
-border-radius:20px;
+/*box-shadow: 0 0 5px 0 ThreeDShadow;*/
+border-radius: 0 0 20px 20px;
 }
 
 .clickable{
@@ -380,6 +404,16 @@ height:150px;
 cursor:pointer;
 display: block;
 }
+
+.presntnImg{
+float:left;
+margin: 0px;
+padding:0px;
+width:150px;
+border-radius: 0 0 20px 20px;
+}
+
+
 #prsntContent:hover{
 background:grey;
 cursor:pointer;
@@ -389,7 +423,7 @@ z-index:1000;
 
 #hoverContent{
 position:absolute;
-margin:20px 0 0 0;
+margin:30px 0 0 0;
 width:140px;
 height:20px;
 display:none;
@@ -427,7 +461,59 @@ display:none;
 
 /********************************/
 
+/**************************************PROFILE STYLES*****************************************/
+#profileWrapper{
+margin:0 auto;
+padding:25px 0 0;
+width:50%;
+display: inline-block;
+background: #FFFFFF;
+box-shadow:0px 0px 5px 1px #E5E5E5;
+font-size: 16px;
+font-family: 'Open Sans Light',sans-serif;
+font-weight: normal;
+line-height: 100%;
+text-shadow: 0 1px 0 rgba(255, 255, 255, 0.75);
+}
 
+#profileContent{
+margin:0 auto;
+padding:0 0 0;
+width:50%;
+display: inline-block;
+}
+
+#profileContent ul{
+padding:0 0 0;
+width:90%;
+display: inline-block;
+text-align: left;
+}
+
+#profileContent ul li{
+float:left;
+margin:0 0 15px 0;
+padding:0 0 0;
+}
+
+.profAddress{
+width:355px;
+
+}
+.profAddress>p{
+ margin: 0 0 25px 140px;
+}
+
+
+.profContact{
+width:355px;
+}
+
+.profContact>p{
+margin: 0 0 25px 140px;
+text-align: left;
+width: 260px;
+}
 
 /*--------------------------------FOOTER STYLES-------------------------------*/
 #footerDiv{
@@ -436,7 +522,7 @@ margin:0px;
 padding:0 0 0;
 width:100%;
 height:80px;
-background: #A9A9A9;
+background: #000000;
 }
 
 #footerDevBy{
@@ -455,5 +541,5 @@ margin:5px 0 0 0;
 padding:0 0 0;
 width:100%;
 height:30px;
-background: #A9A9A9;
+background: #000000;
 }
