--- a/css/general.css
+++ b/css/general.css
@@ -171,14 +171,14 @@ text-align:center;
 }
 
 /*----------------------------------DASHBOARD STYLES------------------------------------------*/
-#prsntnMenu{
+#menu{
 margin: 0 0 40px 0;
 padding:0 0 0;
 width: 100%;
 height:40px;
 }
 
-#prsntnMenu>.addbtn{
+#menu>.addbtn{
 background: none repeat scroll 0 0 #D9D9D9;
 border-radius: 20px 20px 20px 20px;
 float: right;
@@ -458,6 +458,26 @@ display:none;
     position: absolute;
     z-index: 99;
 }
+
+
+
+.source-image {
+    width:200px;
+	height:200px;
+}/*
+.source-image img {
+    display: block
+}
+.source-image:after {
+    
+    width: 32px;
+    height: 32px;
+    display: block;
+    content: ' ';
+    position: absolute;
+    bottom: 0;
+    right: 0
+}*/
 
 /********************************/
 
