--- a/css/general.css
+++ b/css/general.css
@@ -664,6 +664,7 @@ cursor:move;
 
     border: 1px solid red;
 }
+
 .backBtn{
 float:left;
 background:#8F9DB7;
@@ -671,12 +672,22 @@ border:1px solid;
 margin: 0 0 0 10px;
 cursor:pointer;
 }
+
 .frntBtn{
 float:left;
 background:#8F9DB7;
 border:1px solid;
 margin: 0 0 0 10px;
 cursor:pointer;
+}
+
+.toolBtn{
+background:#FFDE7A;
+border:1px solid #54BCE7;
+border-radius:3px;
+margin: 0 0 0 70px;
+cursor:pointer;
+display: inline;
 }
 /************************************************************************************************************************/
 
